<?xml version="1.0"?>
<package format="3">
  <name>ur10e_unity_bridge</name>
  <version>0.1.0</version>
  <description>Bridge MoveIt planned trajectories to Unity joint trajectory topic.</description>
  <maintainer email="eric@example.com">Eric Berg</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
